fix: Update ecat integration depandencies to version range

--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,13 @@
         <dependency>
             <groupId>com.ecat</groupId>
             <artifactId>integration-modbus</artifactId>
-            <version>1.0.0</version>
+            <version>[1.0.0,2.0.0)</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.ecat</groupId>
             <artifactId>ecat-core</artifactId>
-            <version>1.0.0</version>
+            <version>[1.0.0,2.0.0)</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
